Fixed mobile overflow. Fixed exiting modal cmd

--- a/src/assets/scss/__main.scss
+++ b/src/assets/scss/__main.scss
@@ -1,3 +1,9 @@
 body, html {
+    
+}
+
+body {
     overflow-x: hidden;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
